--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ authors = ["Oliver Caldwell <olliec87@gmail.com>"]
 neovim-lib = "0.5.4"
 edn = "0.3.0"
 regex = "1.0.5"
+log = "0.4.6"
+simplelog = "0.5.3"
