--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Oliver Caldwell <olliec87@gmail.com>"]
 
 [dependencies]
-neovim-lib = { git = "https://github.com/Olical/neovim-lib", branch = "naming-fixes"}
+neovim-lib = { git = "https://github.com/daa84/neovim-lib", branch = "master"}
 edn = "0.3.0"
 regex = "1.0.5"
 log = "0.4.6"
