Got eval working for CLJS and CLJ!

--- a/.lvimrc
+++ b/.lvimrc
@@ -1,1 +1,6 @@
-nnoremap <buffer> <localleader>t :source autoload/conjure.vim<CR>:source plugin/conjure.vim<CR>:call conjure#restart_job()<CR>:call conjure#connect("default", "127.0.0.1:5555", "cljc?$")<CR>
+nnoremap <buffer> <localleader>t
+            \ :source autoload/conjure.vim<CR>
+            \ :source plugin/conjure.vim<CR>
+            \ :call conjure#restart_job()<CR>
+            \ :call conjure#connect("jvm", "127.0.0.1:5555", "cljc?$", "clj")<CR>
+            \ :call conjure#connect("node", "127.0.0.1:5556", "cljc?$", "cljs")<CR>
