--- a/.lvimrc
+++ b/.lvimrc
@@ -3,4 +3,4 @@ nnoremap <buffer> <localleader>t
             \ :source plugin/conjure.vim<CR>
             \ :call conjure#restart_job()<CR>
             \ :call conjure#connect("jvm", "127.0.0.1:5555", "cljc?$", "clj")<CR>
-            \ :call conjure#connect("node", "127.0.0.1:5556", "cljc?$", "cljs")<CR>
+            \ :call conjure#connect("node", "127.0.0.1:5556", "clj(s\|c)$", "cljs")<CR>
