--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ chrono = "0.4.6"
 edn = "0.3.0"
 failure = "0.1.3"
 log = "0.4.6"
-neovim-lib = { git = "https://github.com/daa84/neovim-lib", branch = "master"}
+neovim-lib = "0.6.0"
 regex = "1.0.5"
 simplelog = "0.5.3"
 lazy_static = "1.2.0"
