--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "homepage": "https://github.com/Olical/conjure#readme",
   "devDependencies": {
     "neovim": "^4.2.1"
+  },
+  "dependencies": {
+    "byline": "^5.0.0"
   }
 }
