--- a/.lvimrc
+++ b/.lvimrc
@@ -5,11 +5,11 @@ nnoremap <localleader>cc :DevAdd {:tag :jvm, :port 5555}<cr>
 
 nnoremap <localleader>cs :DevStatus<cr>
 
-nnoremap <localleader>ce :DevEvalInnerForm<cr>
-nnoremap <localleader>cE :DevEvalOuterForm<cr>
-nnoremap <localleader>cb :DevEvalBuffer<cr>
-nnoremap <localleader>cf :DevEvalFile<cr>
-vnoremap <localleader>ce :DevEvalVisualSelection<cr>
+nnoremap <localleader>ce :DevEvalCurrentForm<cr>
+nnoremap <localleader>cE :DevEvalRootForm<cr>
+vnoremap <localleader>ce :DevEval<cr>
+nnoremap <localleader>cb :%DevEval<cr>
+nnoremap <localleader>cf :DevEval (load-file "<c-r>%")<cr>
 nnoremap <localleader>cK :DevDoc expand("<cword>")<cr>
 nnoremap <localleader>cl :DevOpenLog<cr>
 nnoremap <localleader>cL :DevCloseLog<cr>
