All core bindings working

--- a/.lvimrc
+++ b/.lvimrc
@@ -7,12 +7,11 @@ nnoremap <localleader>cs :DevStatus<cr>
 
 nnoremap <localleader>ce :DevEvalCurrentForm<cr>
 nnoremap <localleader>cE :DevEvalRootForm<cr>
-vnoremap <localleader>ce :DevEvalRange<cr>
-
-" TODO I think this needs to be it's own command...
-nnoremap <localleader>cf :%DevEvalRange<cr>
+vnoremap <localleader>ce :DevEvalSelection<cr>
+nnoremap <localleader>cf :DevEvalBuffer<cr>
 nnoremap <localleader>cF :DevEval (clojure.core/load-file "<c-r>%")<cr>
-nnoremap <localleader>cK :DevDoc <c-r>=expand("<cword>")<cr><cr>
+
+nnoremap <localleader>cK :DevDoc <c-r><c-w><cr>
 nnoremap <localleader>cs :DevStatus<cr>
 nnoremap <localleader>cl :DevOpenLog<cr>
-nnoremap <localleader>cq :DevCloseLog<cr>
+nnoremap <localleader>cL :DevCloseLog<cr>
