Move to autoload+lua dirs, add default mappings

--- a/.lvimrc
+++ b/.lvimrc
@@ -1,1 +1,3 @@
 nnoremap <localleader>rc :ConjureAdd {:tag :dev, :port 5885}<cr>
+let &runtimepath.=','.resolve(expand("<sfile>:p:h"))
+source plugin/conjure.vim
