Ensure make dev actually starts up
The wrong autoload/conjure.vim had already loaded and autoloads aren't
loaded again after they're in memory.

--- a/.lvimrc
+++ b/.lvimrc
@@ -1,3 +1,4 @@
 nnoremap <localleader>rc :ConjureAdd {:tag :dev, :port 5885}<cr>
 let &runtimepath.=','.resolve(expand("<sfile>:p:h"))
+source autoload/conjure.vim
 source plugin/conjure.vim
