Actually prevent the vim-plug version loading
So now make dev works!

--- a/.lvimrc
+++ b/.lvimrc
@@ -1,4 +1,4 @@
 nnoremap <localleader>rc :ConjureAdd {:tag :dev, :port 5885}<cr>
+set runtimepath-=~/.config/nvim/plugged/conjure/
 let &runtimepath.=','.resolve(expand("<sfile>:p:h"))
-source autoload/conjure.vim
 source plugin/conjure.vim
