--- a/.lvimrc
+++ b/.lvimrc
@@ -1,4 +1,9 @@
 nnoremap <localleader>rc :ConjureAdd {:tag :dev, :port 5885}<cr>
 set runtimepath-=~/.config/nvim/plugged/conjure/
 let &runtimepath.=','.resolve(expand("<sfile>:p:h"))
-source plugin/conjure.vim
+
+if !exists("g:conjure_initialised")
+  let g:conjure_initialised = 1
+  source autoload/conjure.vim
+  call conjure#init()
+endif
