--- a/.lvimrc
+++ b/.lvimrc
@@ -1,6 +1,5 @@
 nnoremap <localleader>rc :ConjureAdd {:tag :dev, :port 5885}<cr>
-set runtimepath-=~/.config/nvim/plugged/conjure/
-let &runtimepath.=','.resolve(expand("<sfile>:p:h"))
+let &runtimepath=resolve(expand("<sfile>:p:h")) . "," . &runtimepath
 
 if !exists("g:conjure_initialised")
   let g:conjure_initialised = 1
