--- a/.lvimrc
+++ b/.lvimrc
@@ -1,4 +1,8 @@
 nnoremap <localleader>rc :ConjureAdd {:tag :dev, :port 5885}<cr>
+nnoremap <localleader>rC 
+      \:ConjureAdd {:tag :jvm, :port 5555}<cr>
+      \:ConjureAdd {:tag :node, :port 5556, :lang :cljs}<cr>
+      " \:ConjureAdd {:tag :browser, :port 5557, :lang :cljs}<cr>
 
 let &runtimepath=resolve(expand("<sfile>:p:h")) . "," . &runtimepath
 lua package.loaded["conjure"] = nil
