--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,6 @@
-version: 2
+version: 2.1
+orbs:
+  codecov: codecov/codecov@1.0.2
 jobs:
   build:
     docker:
@@ -17,9 +19,13 @@ jobs:
           clojure -A:test
           --plugin kaocha.plugin/junit-xml
           --junit-xml-file test-results/kaocha/results.xml
+          --plugin cloverage
 
       - store_test_results:
           path: test-results
+
+      - codecov/upload:
+          file: {{ coverage_report_filepath }}
 
       - save_cache:
           paths:
