--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 orbs:
   codecov: codecov/codecov@1.0.2
 jobs:
-  build:
+  test:
     docker:
       - image: circleci/clojure:tools-deps-1.10.0.442
 
@@ -31,3 +31,8 @@ jobs:
           paths:
             - ~/.m2
           key: deps-{{ checksum "deps.edn" }}
+
+workflows:
+  version: 2
+  test:
+    jobs: test
