--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,53 +9,56 @@ executors:
       - image: circleci/clojure:tools-deps-1.10.0.442
     working_directory: ~/conjure
 
-jobs:
-  restore:
-    executor: clojure
+commands:
+  with-deps:
+    parameters:
+      steps:
+        description: "Checksums to differentiate the job's cache."
+        type: string
+        default: "default"
+      steps:
+        description: "Steps to execute after the repo and deps are fetched but before the cache is saved."
+        type: steps
+        default: []
     steps:
       - checkout
       - restore_cache:
           keys:
-            - deps-{{ checksum "deps.edn" }}-{{ checksum "injected-deps.edn" }}
+            - deps-<< parameters.cache-key >>
+      - steps: << parameters.steps >>
+      - save_cache:
+          paths:
+            - ~/.m2
+          key: deps-<< parameters.cache-key >>
 
+jobs:
   compile:
     executor: clojure
     steps:
-      - run: bin/compile
+      - with-deps:
+          cache-key: compile-{{ checksum "deps.edn" }}-{{ checksum "injected-deps.edn" }}
+          steps:
+            - run: bin/compile
 
   test:
     executor: clojure
     steps:
-      - run: >
-          bin/kaocha
-          --plugin kaocha.plugin/junit-xml
-          --junit-xml-file test-results/kaocha/results.xml
-          --plugin cloverage --no-cov-html --codecov --cov-ns-exclude-regex "^conjure\.compile\.main$"
-      - store_test_results:
-          path: test-results
-      - codecov/upload:
-          file: target/coverage/codecov.json
-
-  save:
-    executor: clojure
-    steps:
-      - save_cache:
-          paths:
-            - ~/.m2
-          key: deps-{{ checksum "deps.edn" }}-{{ checksum "injected-deps.edn" }}
+      - with-deps:
+          cache-key: test-{{ checksum "deps.edn" }}
+          steps:
+            - run: >
+                bin/kaocha
+                --plugin kaocha.plugin/junit-xml
+                --junit-xml-file test-results/kaocha/results.xml
+                --plugin cloverage --no-cov-html --codecov --cov-ns-exclude-regex "^conjure\.compile\.main$"
+            - store_test_results:
+                path: test-results
+            - codecov/upload:
+                file: target/coverage/codecov.json
 
 workflows:
   version: 2
-  checks:
+  test:
     jobs:
-      - restore
-      - compile:
-          requires:
-            - restore
-      - test:
-          requires:
-            - restore
-      - save:
-          requires:
-            - compile
-            - test
+      - compile
+      - test
