Use Aniseed's docker image and better with-out-str

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: olical/conjure-sourcery-circleci:0.0.3
+      - image: olical/aniseed-circleci:1.0.0
     steps:
       - checkout
       - run: make deps
