--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.fnl linguist-language=Lisp
 lua/* linguist-generated
 lua/conjure/aniseed linguist-vendored
+lua/conjure/bencode.lua linguist-vendored
