Restructure bencode as a remote transport module

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 lua/* linguist-generated
 lua/conjure/aniseed linguist-vendored
-lua/conjure/bencode.lua linguist-vendored
+lua/conjure/remote/transport/bencode/impl.lua linguist-vendored
