--- a/mise.toml
+++ b/mise.toml
@@ -5,4 +5,5 @@ run = "scripts/dep.sh Olical bencode origin/master"
 run = "scripts/sponsors.sh"
 
 [tasks.test]
+# tools.neovim = "0.9.5"
 run = ["scripts/setup-test-deps", "scripts/test"]
