--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,10 +4,13 @@ on: [push]
 
 jobs:
   test:
-    runs-on: ubuntu-latest
     strategy:
       matrix:
-        neovim-version: ["v0.9.5", "v0.10.4", "stable", "nightly"]
+        os: [ubuntu-latest]
+        # os: [ubuntu-latest, macOS-latest, windows-latest]
+        neovim-version: ["0.9.5", "0.10.4", "stable", "nightly"]
+
+    runs-on: ${{ matrix.os }}
 
     steps:
       - uses: actions/checkout@v4
