--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,5 +17,7 @@ jobs:
       - name: Install Mise
         uses: jdx/mise-action@v2
       - name: Test
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           mise run -t neovim@${{ matrix.neovim-version }} test
