--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,7 +6,9 @@ jobs:
   test:
     strategy:
       matrix:
-        os: [ubuntu-latest, macOS-latest, windows-latest]
+        # TODO: Get windows-latest working.
+        # Currently errors with: ln: failed to create symbolic link '.test/nvim/pack/main/start/conjure' -> '../../../../../': File name too long
+        os: [ubuntu-latest, macOS-latest]
         neovim-version: ["0.9.5", "0.10.4", "stable", "nightly"]
 
     runs-on: ${{ matrix.os }}
@@ -24,10 +26,6 @@ jobs:
             .test/nvim/pack
           key: conjure-${{ hashFiles('scripts/setup-test-deps') }}
           restore-keys: conjure-
-
-      - name: Windows paths fix
-        if: runner.os == 'Windows'
-        run: git config --global core.longpaths true
 
       - name: Test
         env:
