Swap benchmarks to a pinned version

--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        neovim-version: ["stable"]
+        neovim-version: ["v0.11.3"]
 
     runs-on: ${{ matrix.os }}
 
